@@ -171,6 +171,8 @@ Interface
 * Allow aborting of position prompts for jumping, polearm pounding, grappling
   hooks, scrolls of stinking cloud (still consumes the scroll), paying with
   multiple shopkeepers in sight and spells of fireball and cone of cold.
+* Dungeon `#overview` can toggle showing levels with no notable features.
+    - Dungeon `#overview` no longer exits after viewing a single level.
 * Fix the color of the Wizard's Tower walls when viewed from another level using
   the `Ctrl-O` dungeon overview.
 * Fix "T - take off" not appearing in the item action menu of meat rings.
